build UTXO